--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "framer-motion": "^12.19.3",
     "react": "^19.1.0",
